--- a/css/index.css
+++ b/css/index.css
@@ -18,14 +18,27 @@ header {
 
 .estilo-menu{
     list-style: none;
+    display: flex;
 }
 
 .estilo-menu a{
     text-decoration: none;
     margin: 10px;
     display: block;
-    font-size: 30px;
+    font-size: 20px;
     color:#3c5aa6;
+}
+
+#menu-movil li:nth-child(-n+2) {
+    border-right: 1px solid black;
+}
+
+#loading{
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    display: none;
 }
 
 @media screen and (max-width: 376px) {
@@ -37,11 +50,19 @@ header {
         justify-content: space-around;
     }
 
+    .estilo-menu{
+        display: inline;
+    }
+
     .menu-movil {
         display: none;
     }
 
     .barras-menu {
         display: block;
+    }
+
+    #menu-movil li:nth-child(-n+2) {
+        border: none;
     }
 }
