Funciona pero no como yo quiero

--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,11 @@ header {
         align-items: center;
     }
 
+    #keepWalking{
+        width: 50;
+        height: 25;
+    }
+
     .estilo-menu {
         display: none;
     }
