menu modificado para celular

--- a/css/index.css
+++ b/css/index.css
@@ -195,6 +195,10 @@ header {
         display: none;
     }
 
+    .estilo-menu li {
+        display: block;
+    }
+
     #barras-menu {
         display: block;
     }
